fix cam + pleins de choses

--- a/La Nonne/Packages/manifest.json
+++ b/La Nonne/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.3.3",
+    "com.jcavaillac.utilities": "https://github.com/Tuozi-10/utilities.git?path=/UtilityProject/Assets/src",
     "com.unity.burst": "1.8.2",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.17.7",
